--- a/week-3/day-4/Activities/05-Bujumbura/Unsolved/bujumbura-easier.html
+++ b/week-3/day-4/Activities/05-Bujumbura/Unsolved/bujumbura-easier.html
@@ -9,13 +9,14 @@
 <body>
   <!-- Retrieved data will be dumped here -->
   <div class="city"></div>
-  <div class="wind"></div>
+  <div class="wind-speed"></div>
+  <div class="wind-deg"></div>
   <div class="humidity"></div>
   <div class="temp"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript">
     // This is our API key. Add your own API key between the ""
-    var APIKey = "";
+    var APIKey = "099e9abeec42b1661b57eea15f93f211";
 
     // Here we are building the URL we need to query the database
     var queryURL = "https://api.openweathermap.org/data/2.5/weather?q=Bujumbura,Burundi&appid=" + APIKey;
@@ -24,14 +25,20 @@
     $.ajax({
       url: queryURL,
       method: "GET"
-    }).then(function(response) {
-
+    }).then(function (response) {
       // Create CODE HERE to Log the queryURL
+      console.log(queryURL);
       // Create CODE HERE to log the resulting object
+      console.log(response);
       // Create CODE HERE to transfer content to HTML
+      $(".city").append("City - " + response.name);
+      $(".wind-speed").append("Wind Speed: " + response.wind.speed);
+      $(".wind-deg").append("Wind Deg: " + response.wind.deg);
+      $(".humidity").append("Humidity: " + response.main.humidity + "%");
       // Create CODE HERE to calculate the temperature (converted from Kelvin)
-      // Hint: To convert from Kelvin to Fahrenheit: F = (K - 273.15) * 1.80 + 32
+      var tempF = (response.main.temp - 273.15) * 1.80 + 32;
       // Create CODE HERE to dump the temperature content into HTML
+      $(".temp").append("Temperature:  " + Math.round(tempF) + " F");
 
     });
   </script>
