--- a/week-3/day-4/Activities/10-WorkingMovieApp/Unsolved/working-movie-app-harder.html
+++ b/week-3/day-4/Activities/10-WorkingMovieApp/Unsolved/working-movie-app-harder.html
@@ -23,8 +23,9 @@
     <div id="buttons-view"></div>
 
     <form id="movie-form">
-      <label for="movie-input">Add a Movie Bro</label>
-      <input type="text" id="movie-input"><br>
+      <label for="movie-input">Add a Movie</label>
+      <input type="text" id="movie-input">
+      <br>
 
       <!-- Button triggers new movie to be added -->
       <input id="add-movie" type="submit" value="Add a Movie Bro">
@@ -48,10 +49,34 @@
         $.ajax({
           url: queryURL,
           method: "GET"
-        }).then(function(response) {
+        }).then(function (response) {
+          console.log(response);
 
-          // YOUR CODE GOES HERE!!!
+          var poster = $("<img>");
+          poster.attr("src", response.Poster);
+          $("#movies-view").append(poster)
 
+          var rating = $("<div>");
+          rating.text("Rating: ")
+          $("#movies-view").append(rating)
+          var first = $("<p>")
+          first.text(response.Ratings[0].Source + " - " + response.Ratings[0].Value);
+          $(rating).append(first)
+          var second = $("<p>");
+          second.text(response.Ratings[1].Source + " - " + response.Ratings[1].Value);
+          $(rating).append(second)
+          var third = $("<p>");
+          third.text(response.Ratings[2].Source + " - " + response.Ratings[2].Value);
+          $(rating).append(third)
+
+
+          var releaseDate = $("<div>");
+          releaseDate.text("Release Date: " + response.Released);
+          $("#movies-view").append(releaseDate)
+
+          var plot = $("<div>");
+          plot.text("Plot: " + response.Plot);
+          $("#movies-view").append(plot)
         });
 
       }
@@ -81,7 +106,7 @@
       }
 
       // This function handles events where the add movie button is clicked
-      $("#add-movie").on("click", function(event) {
+      $("#add-movie").on("click", function (event) {
         event.preventDefault();
         // This line of code will grab the input from the textbox
         var movie = $("#movie-input").val().trim();
