--- a/week-3/day-4/Activities/10-WorkingMovieApp/Unsolved/working-movie-app-harder.html
+++ b/week-3/day-4/Activities/10-WorkingMovieApp/Unsolved/working-movie-app-harder.html
@@ -113,7 +113,7 @@
 
         // The movie from the textbox is then added to our array
         movies.push(movie);
-
+        $("#movie-input").val("")
         // Calling renderButtons which handles the processing of our movie array
         renderButtons();
 
