--- a/week-3/day-4/Activities/06-MovieJSONDump/Unsolved/movie-json-dump.html
+++ b/week-3/day-4/Activities/06-MovieJSONDump/Unsolved/movie-json-dump.html
@@ -24,6 +24,20 @@
       <input id="find-movie" type="submit" value="Movie Search">
     </form>
 
+    <div id="box"></div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+      <label class="form-check-label" for="defaultCheck1">
+        Default checkbox
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="defaultCheck2" disabled>
+      <label class="form-check-label" for="defaultCheck2">
+        Disabled checkbox
+      </label>
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript">
       // This .on("click") function will trigger the AJAX Call
@@ -62,6 +76,11 @@
         });
         // =================================================================
       });
+
+
+
+
+
     </script>
   </div>
 </body>
