--- a/week-4/day-1/Activites/01-todolist-nopersistence/Unsolved/1-student-do-todolist.html
+++ b/week-4/day-1/Activites/01-todolist-nopersistence/Unsolved/1-student-do-todolist.html
@@ -22,10 +22,7 @@
 
   <!-- Input Form -->
   <form>
-    <span id="todo-item">To Do Item:
-      <input id="to-do" type="text">
-      <input id="add-to-do" value="Add Item" type="submit">
-    </span>
+    <span id="todo-item">To Do Item: <input id="to-do" type="text" ><input id="add-to-do" value="Add Item" type="submit"></span>
   </form>
 
   <hr>
@@ -41,23 +38,19 @@
     //  ============================= START CODING BELOW! =============================================
 
     // Create an initial toDoCount variable
-    var toDoCount = 0;
-
     //  On Click event associated with the add-to-do function
-    $("#add-to-do").on("click", function (event) {
+    $("#add-to-do").on("click", function(event) {
       // prevent form from submitting
       event.preventDefault();
 
       // Get the to-do "value" from the textbox and store it a variable
-      var toDoValue = $("#to-do").val().trim();
+
 
       // Create a new variable that will hold a "<p>" tag.
-      var newP = $("<p>");
       // Then give it an ID in the following form:
-      newP.attr("id", "item-" + toDoCount)
       // "item-4" or "item-3" or "item-99", where the number is equal to toDoCount.
       // Then append the to-do "value" as text to this <p> element.
-      newP.append(toDoValue)
+
 
       // Create a button with unique identifiers based on what number it is in the list. Again use jQuery to do this.
       // Give your button a data attribute called data-to-do and a class called "checkbox".
@@ -80,7 +73,7 @@
     //  When a user clicks a check box then delete the specific content
     //  (NOTE: Pay attention to the unusual syntax here for the click event.
     //  Because we are creating click events on "dynamic" content, we can't just use the usual "on" "click" syntax.)
-    $(document.body).on("click", ".checkbox", function () {
+    $(document.body).on("click", ".checkbox", function() {
 
       // Get the number of the button from its data attribute and hold in a variable called  toDoNumber.
 
