--- a/week-4/day-1/Activites/01-todolist-nopersistence/Unsolved/1-student-do-todolist.html
+++ b/week-4/day-1/Activites/01-todolist-nopersistence/Unsolved/1-student-do-todolist.html
@@ -22,7 +22,10 @@
 
   <!-- Input Form -->
   <form>
-    <span id="todo-item">To Do Item: <input id="to-do" type="text" ><input id="add-to-do" value="Add Item" type="submit"></span>
+    <span id="todo-item">To Do Item:
+      <input id="to-do" type="text">
+      <input id="add-to-do" value="Add Item" type="submit">
+    </span>
   </form>
 
   <hr>
@@ -38,42 +41,49 @@
     //  ============================= START CODING BELOW! =============================================
 
     // Create an initial toDoCount variable
+    var toDoCount = 0;
     //  On Click event associated with the add-to-do function
-    $("#add-to-do").on("click", function(event) {
+    $("#add-to-do").on("click", function (event) {
       // prevent form from submitting
       event.preventDefault();
 
       // Get the to-do "value" from the textbox and store it a variable
-
+      var toDoValue = $("#to-do").val()
 
       // Create a new variable that will hold a "<p>" tag.
+      var pTag = $("<p>");
       // Then give it an ID in the following form:
       // "item-4" or "item-3" or "item-99", where the number is equal to toDoCount.
+      pTag.attr("id", "item-" + toDoCount);
       // Then append the to-do "value" as text to this <p> element.
-
+      pTag.append(toDoValue);
 
       // Create a button with unique identifiers based on what number it is in the list. Again use jQuery to do this.
       // Give your button a data attribute called data-to-do and a class called "checkbox".
       // Lastly append the letter X inside.
-
+      var button = $("<button>");
+      button.attr("data-to-do", toDoCount);
+      button.addClass("checkbox");
+      button.append("📍");
 
       // Append the button to the to do item
+      $(pTag).prepend(button);
 
 
       // Add the button and toDoItem to the to-dos div
-
+      $("#to-dos").append(pTag);
 
       // Clear the textbox when done
-
+      $("#to-do").val("");
 
       // Add to the toDoCount
-
+      toDoCount++;
     });
 
     //  When a user clicks a check box then delete the specific content
     //  (NOTE: Pay attention to the unusual syntax here for the click event.
     //  Because we are creating click events on "dynamic" content, we can't just use the usual "on" "click" syntax.)
-    $(document.body).on("click", ".checkbox", function() {
+    $(document.body).on("click", ".checkbox", function () {
 
       // Get the number of the button from its data attribute and hold in a variable called  toDoNumber.
 
