--- a/week-4/day-1/Activites/02-signin-nopersistence/Unsolved/2-student-do-signin-no-persistence.html
+++ b/week-4/day-1/Activites/02-signin-nopersistence/Unsolved/2-student-do-signin-no-persistence.html
@@ -84,17 +84,41 @@
     // ========================================= START CODING BELOW!!
 
     // Capture Button Click
-    $("#add-user").on("click", function(event) {
+    $("#add-user").on("click", function (event) {
       event.preventDefault();
 
       // Capture User Inputs and store them into variables
-
+      var nameInput = $("#name-input").val().trim();
+      var emailInput = $("#email-input").val().trim();
+      var ageInput = $("#age-input").val().trim();
+      var commentInput = $("#comment-input").val().trim();
 
       // Console log each of the user inputs to confirm we are receiving them correctly
-
+      console.log(nameInput)
+      console.log(emailInput)
+      console.log(ageInput)
+      console.log(commentInput)
 
       // Output all of the new information into the relevant HTML sections
+
+
+      localStorage.clear();
+
+      localStorage.setItem("name", nameInput);
+      localStorage.setItem("email", emailInput);
+      localStorage.setItem("age", ageInput);
+      localStorage.setItem("comment", commentInput);
+
+      $("#name-display").text(localStorage.getItem("name"));
+      $("#email-display").text(localStorage.getItem("email"));
+      $("#age-display").text(localStorage.getItem("age"));
+      $("#comment-display").text(localStorage.getItem("comment"));
     });
+
+    $("#name-display").text(localStorage.getItem("name"));
+    $("#email-display").text(localStorage.getItem("email"));
+    $("#age-display").text(localStorage.getItem("age"));
+    $("#comment-display").text(localStorage.getItem("comment"));
   </script>
 
 </body>
