--- a/week-4/day-1/Activites/11-countdownbutton/Unsolved/student-do-downbutton.html
+++ b/week-4/day-1/Activites/11-countdownbutton/Unsolved/student-do-downbutton.html
@@ -7,8 +7,19 @@
   <title>CountDown Button with Firebase!</title>
 
   <!-- Firebase Reference -->
-  <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
-
+  <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyAEp7ekHTnY4CQIoTcUi-LzciZARciBeS4",
+      authDomain: "fir-database-bf4e3.firebaseapp.com",
+      databaseURL: "https://fir-database-bf4e3.firebaseio.com",
+      projectId: "fir-database-bf4e3",
+      storageBucket: "fir-database-bf4e3.appspot.com",
+      messagingSenderId: "169914748936"
+    };
+    firebase.initializeApp(config);
+  </script>
 </head>
 
 <body>
