--- a/week-7/day-1/Activities/05-Serve-Favorites/favcss.html
+++ b/week-7/day-1/Activities/05-Serve-Favorites/favcss.html
@@ -16,6 +16,9 @@
             <li>semantics</li>
         </ol>
     </div>
+    <a href="index.html">
+        <button type="button" class="btn btn-link">home</button>
+    </a>
 </body>
 
 </html>
